--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -2,8 +2,8 @@
 /*BACKGROUND*/
 body {
 	background-image: url("https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-	background-position: absolute;
 	background-size: cover;
+	background-position: absolute;
 	
 }
 /*Navbar*/
@@ -205,6 +205,10 @@ footer p a:hover{
 	float: left;
 	border-width: none;
 }
-    
+
+#video {
+	margin-left: 500px;
+	margin-right: 500px;
+}
 
 
