--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /*BACKGROUND*/
-body {
+/*body {
 	background-image: url("https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 	background-size: cover;
 	background-position: absolute;
 	
-}
+}*/
 /*Navbar*/
 
 /*CAROSELLO IMMAGINI*/
