UPDATE(d'ora in poi ci conviene scrivere nella descrizione della commit gli aggiornamenti più importanti, così da non perdere tempo a cercare eventuali problemi causati dagli aggiornamenti)
- aggiunta: navbar alle pagine login e signup(così per avere il collegamento con la home.
- aggiunto: pulsante per andare a signup dalla pagina di login se l'utente non ha il profilo.
- test: ho opacizzato leggermente i bottoni degli articoli nell'hompage
- test: cambiato i colori di login e signup(con colori complementari)
-test; cambiato le icone di signun e login.
- rimosso: navbar.html(era inutile ed inutilizzato).
-meme: SEMBRA UNA PATHNOTE DI UNO SVILUPPATORE SERIO. #misentofica

--- a/WebContent/css/default.css
+++ b/WebContent/css/default.css
@@ -2,14 +2,16 @@
 /* DEFAULT CSS PAGE*/
 body{
 	background-image: url("https://images.pexels.com/photos/3165335/pexels-photo-3165335.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-	 background-repeat: no-repeat;
- 	 background-attachment: fixed;
+	background-repeat: no-repeat;
+ 	background-attachment: fixed;
 	
 	background-size: cover;
 	background-position: absolute;
 	
-	
+
 }
+
+
 
 body div a{
 	
@@ -20,6 +22,10 @@ h3 {
 	font-family: "Arial Black", Gadget, sans-serif;
 	
 }
+p {
+	font-family: "Arial Black", Gadget, sans-serif;
+}
+
 
 #nav{ 
 	background-color: #222222;
