--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -2,7 +2,7 @@
 .login-dark form {
   max-width:320px;
   width:90%;
-  background-color:#1e2833;
+  background-color:#671567;
   padding:40px;
   border-radius:4px;
   transform:translate(-50%, -50%);
@@ -17,7 +17,7 @@
   text-align:center;
   padding:15px 0 20px;
   font-size:100px;
-  color:#2980ef;
+  color:#156715;
 }
 
 .login-dark form .form-control {
@@ -28,39 +28,5 @@
   box-shadow:none;
   outline:none;
   color:inherit;
-}
-
-.login-dark form .btn-primary {
-  background:#214a80;
-  border:none;
-  border-radius:4px;
-  padding:11px;
-  box-shadow:none;
-  margin-top:26px;
-  text-shadow:none;
-  outline:none;
-}
-
-.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active {
-  background:#214a80;
-  outline:none;
-}
-
-.login-dark form .forgot {
-  display:block;
-  text-align:center;
-  font-size:12px;
-  color:#6f7a85;
-  opacity:0.9;
-  text-decoration:none;
-}
-
-.login-dark form .forgot:hover, .login-dark form .forgot:active {
-  opacity:1;
-  text-decoration:none;
-}
-
-.login-dark form .btn-primary:active {
-  transform:translateY(1px);
 }
 
