--- a/WebContent/css/signup.css
+++ b/WebContent/css/signup.css
@@ -5,7 +5,7 @@
 }
 
 .registration-form form{
-    background-color: #fff;
+    background-color: #671567;
     max-width: 600px;
     margin: auto;
     padding: 50px 70px;
@@ -15,16 +15,10 @@
 }
 
 .registration-form .form-icon{
-	text-align: center;
-    background-color: #5891ff;
-    border-radius: 50%;
-    font-size: 40px;
-    color: white;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 50px;
-    line-height: 100px;
+  text-align:center;
+  padding:15px 0 20px;
+  font-size:100px;
+  color:#156715;
 }
 
 .registration-form .item{
@@ -38,58 +32,20 @@
     padding: 10px 20px;
     font-size: 18px;
     font-weight: bold;
-    background-color: #5791ff;
+    background-color: #156715;
     border: none;
     color: white;
     margin-top: 20px;
 }
-
-.registration-form .social-media{
-    max-width: 600px;
-    background-color: #fff;
-    margin: auto;
-    padding: 35px 0;
-    text-align: center;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    color: #9fadca;
-    border-top: 1px solid #dee9ff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+a:link{
+	color:green;
 }
-
-.registration-form .social-icons{
-    margin-top: 30px;
-    margin-bottom: 16px;
+a:visited{
+	color:green;
 }
-
-.registration-form .social-icons a{
-    font-size: 23px;
-    margin: 0 3px;
-    color: #5691ff;
-    border: 1px solid;
-    border-radius: 50%;
-    width: 45px;
-    display: inline-block;
-    height: 45px;
-    text-align: center;
-    background-color: #fff;
-    line-height: 45px;
+a:hover{
+	color:green;
 }
-
-.registration-form .social-icons a:hover{
-    text-decoration: none;
-    opacity: 0.6;
-}
-
-@media (max-width: 576px) {
-    .registration-form form{
-        padding: 50px 20px;
-    }
-
-    .registration-form .form-icon{
-        width: 70px;
-        height: 70px;
-        font-size: 30px;
-        line-height: 70px;
-    }
+a:active{
+	color:black;
 }
