--- a/WebContent/css/default.css
+++ b/WebContent/css/default.css
@@ -48,3 +48,13 @@ footer{
     right: 0px;  
 }
 
+.about { 
+	background-color: white;
+    border-color: purple;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 20px;
+    padding: 50px;
+    margin-left: 300px;	
+    margin-right: 300px;
+    margin-top: 100px;	
